--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         name: "Ackee Frontend Cookbook",
         repo: "",
         loadSidebar: true,
-        subMaxLevel: 2
+        subMaxLevel: 0,
       };
     </script>
     <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
