🎨 added collapsing to sidebar
added collapsing to sidebar

--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
         repo: "",
         loadSidebar: true,
         subMaxLevel: 0,
+        alias: {
+          '/.*/_sidebar.md': '/_sidebar.md',
+        },
       };
     </script>
     <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+    
+    <!-- plugins -->
+    <script src="//unpkg.com/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
   </body>
 </html>
