--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       window.$docsify = {
         name: "Ackee Frontend Cookbook",
         repo: "",
+        search: 'auto',
         loadSidebar: true,
         subMaxLevel: 0,
         alias: {
